--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container mt-5">
     <div class="text-center">
-        <h1 class="display-4 mb-4">Welcome to Our Platform</h1>
+        <h1 class="display-4 mb-4">Welcome to Home page</h1>
         <p class="lead mb-5">Please register or login to continue</p>
         
         <div class="row justify-content-center">
