--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -9,5 +9,6 @@
         <button type="submit" class="btn btn-primary">Login</button>
     </form>
     <p class="mt-3">Don't have an account? <a href="{% url 'register' %}">Register here</a></p>
+    <p><a href="{% url 'forgot_password' %}">Forgot Password?</a></p>
 </div>
 {% endblock %} 
