--- a/accounts/templates/accounts/reset_password.html
+++ b/accounts/templates/accounts/reset_password.html
@@ -1,17 +1,31 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Reset Password</h2>
-<form method="post">
-    {% csrf_token %}
-    <div>
-        <label for="password1">New Password:</label>
-        <input type="password" name="password1" required>
+<div class="form-container">
+    <h2>Reset Password</h2>
+    
+    {% if messages %}
+    <div class="messages">
+        {% for message in messages %}
+        <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
+            {{ message }}
+        </div>
+        {% endfor %}
     </div>
-    <div>
-        <label for="password2">Confirm Password:</label>
-        <input type="password" name="password2" required>
-    </div>
-    <button type="submit">Reset Password</button>
-</form>
-{% endblock %} 
+    {% endif %}
+    
+    <form method="post">
+        {% csrf_token %}
+        <div class="form-group">
+            <label for="password">New Password</label>
+            <input type="password" name="password" id="password" required>
+        </div>
+        <div class="form-group">
+            <label for="confirm_password">Confirm Password</label>
+            <input type="password" name="confirm_password" id="confirm_password" required>
+        </div>
+        <input type="hidden" name="token" value="{{ token }}">
+        <button type="submit" class="btn btn-primary">Reset Password</button>
+    </form>
+</div>
+{% endblock %}
